--- a/debian/control
+++ b/debian/control
@@ -32,7 +32,10 @@ Build-Depends:
  python3-dev,
  python3-sphinx,
  python3-pytest <!nocheck>,
- texinfo (>= 4.7)
+ texinfo (>= 4.7),
+ libgrpc++-dev,
+ libprotobuf-dev,
+ protobuf-compiler-grpc
 Standards-Version: 4.2.1
 Homepage: https://www.frrouting.org/
 Vcs-Browser: https://github.com/FRRouting/frr/
